--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
 # Install scripts
 install:
   # Get latest stable version of Node.js or io.js
-  - ps: Install-Prduct node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version
   # install modules
   - npm install
 
